packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_children__comments.snap
---
source: tests/vapor/transform_children.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<div></div>");
(() => {
  const n1 = t0();
  return n1;
})();
