packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__transform_children__fragment.snap
---
source: tests/vapor/transform_children.rs
expression: code
---
import { createNodes as _createNodes } from "vue-jsx-vapor";
(() => {
  const n0 = _createNodes(() => foo);
  return n0;
})();
